# sensory

./: .env.sops.yaml  .gitignore  .sops.yaml  Cargo.toml  README.md  build.rs  justfile  sensor-config.sops.json
.cargo/: config.toml
.github/: dependabot.yml
src/: led_controller.rs  lib.rs  sensor_config.rs
